! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
* v7.2.0:
~~~~~~~~~

* KGySoft.Drawing.Imaging namespace
===================================
+ The Color64 struct has been made public
+ The ColorF struct has been made public
+ New PColor32 struct
+ New PColor64 struct
+ New PColorF struct
* ColorExtensions class:
  + New ToColor/ToColor32/ToColor64/ToColorF/ToPColor32/ToPColor64/ToPColorF methods
  + New ToPremultiplied/ToStraight methods
  + New GetBrightness overloads
  + New GetBrightnessF methods
  + New Blend overloads
  + New TolerantEquals overloads
  * Improving performance (Blend, GetBrightness and some internal conversion operations)
* ColorSpaceHelper class:
  + Adding new ToFloat overload from UInt16
  + Adding new ToUInt16 methods
  + Adding new SrgbToLinear overload from UInt16
  + Adding new LinearToSrgb16Bit method
  + Adding new ToByte overload from UInt16
  - Fixing float-float version of LinearToSrgb for some out-of-bounds values
* Palette class:
  * Grayscale256 method: improving grayscale mapping when working in the linear color space
  + Grayscale16/Grayscale4 methods: special linear color space handling even if directMapping is true
+ PredefinedColorsQuantizer class:
  + New FromCustomFunction overload
* BitmapDataFactory class:
  * Improving grayscale conversion for the known grayscale pixel format when working in the linear color space
- BitmapDataExtensions class:
  - Some Clone overloads did not preserve original back color and alpha threshold.
- PixelFormatInfo struct:
  - Setting HasAlpha to false did not reset also the HasPremultipliedAlpha and HasSingleBitAlpha properties, though
    setting these properties to true did set also the HasAlpha property.


~~~~~~~~~
! v7.1.0:
~~~~~~~~~

! KGySoft.Drawing.Imaging namespace
===================================
! IBitmapData interface: